--- a/fastai/Dockerfile
+++ b/fastai/Dockerfile
@@ -1,6 +1,15 @@
 FROM nvidia/cuda:9.2-base
 
-RUN apt-get update && apt-get install -y git curl bzip2
+RUN apt-get update && apt-get install -y \
+    git \
+    curl \
+    wget \
+    build-essential \
+    ca-certificates \
+    python-qt4 \
+    libjpeg-dev \
+	zip \
+	unzip
 RUN curl -o ~/miniconda.sh -O  https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh  && \
      chmod +x ~/miniconda.sh && \
      ~/miniconda.sh -b -p /opt/conda && \
@@ -9,6 +18,10 @@ RUN curl -o ~/miniconda.sh -O  https://repo.continuum.io/miniconda/Miniconda3-la
 
 WORKDIR /notebooks
 RUN git clone https://github.com/fastai/fastai
+RUN ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh && echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc
+ENV PATH /opt/conda/bin:/opt/conda/envs/fastai/bin:$PATH
+
 WORKDIR /notebooks/fastai
-RUN /opt/conda/bin/conda env create -f environment.yml
-RUN /opt/conda/bin/conda activate fastai
+RUN conda env create -f environment.yml
+
+CMD conda activate fastai
